manifests/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: auth
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
